# QO100-Partable

./: README.md
Docs/: ADF4351_eval.MD  adf4351-lcd.ino
Hardware/: README.md
Hardware/DownConverter/DownConverter/: DownConverter-cache.lib  DownConverter-rescue.lib  DownConverter.kicad_prl  DownConverter.kicad_pro  DownConverter.sch  DownConverter.sch-bak  sym-lib-table
N3B/N3B_Transceiver_Project/: #auto_saved_files#  N3B_Transceiver_Project.kicad_prl  N3B_Transceiver_Project.kicad_pro  N3B_Transceiver_Project.kicad_sch  sym-lib-table  ~N3B_Transceiver_Project.kicad_sch.lck
N3B/N3B_Transceiver_Project/B3N_library/: AD8348ARUZ.STEP  ADF4360-5BCP.step  QFN50P400X400X100-25N.kicad_mod
N3B/N3B_Transceiver_Project/MCU_RaspberryPi_and_Boards.pretty/: AD8132ARMZ.kicad_sym
N3B/N3B_Transceiver_Project/sub_sheets/: Receiver.kicad_sch  Transmitter.kicad_sch  rx_rf.kicad_sch  tx_rf.kicad_sch
PicoVersion/HW/13cmPico/: #auto_saved_files#  13cmPico.kicad_prl  13cmPico.kicad_pro  13cmPico.kicad_sch  ETC1-1-13TR.kicad_sym  SM22.kicad_mod  n3b_tx.kicad_sym  sym-lib-table
PicoVersion/HW/13cmPico/B3N_library/: ADF435X_module.bak  ADF435X_module.kicad_sym
PicoVersion/HW/13cmPico/rAD8348_Receiver/: fp-info-cache  (+4 more)
PicoVersion/HW/13cmPico_ADF8349/: 13cmPico_ADF8349.kicad_prl  13cmPico_ADF8349.kicad_pro  13cmPico_ADF8349.kicad_sch
PicoVersion/SW/B3N-TX2/: CMakeLists.txt  adf4351.c  adf4351.h  dsp.c  dsp_tim.c  hmi.c  hmi.h  main.c  main.h  monitor.c  ssd1306_i2c.c  ssd1306_i2c.h
Software_Main/: README.md  lcd.c  lcd.cpp  qo_100_manpack.c
Software_Main/qo-100-adf4531-tx/: qo-100-adf4531-tx.ino
Software_Main/qo100_tx/: qo100_tx.ino
Software_Tracker/: README.md  qo_100_tracker.c
TX/: QO100_tx.ino
software_trials/qo100-portable-sdr-tx/: platformio.ini  workspace.code-workspace
software_trials/qo100-portable-sdr-tx/src/: main.cpp
software_trials/qo_100_adf4531_tx/: qo_100_adf4531_tx.ino
usdx/: usdx.ino
(+14 files in other folders)
